build_error.log
    Finished `release` profile [optimized] target(s) in 0.25s
WARNING: `idl-build` feature of `anchor-spl` is not enabled. This is likely to result in cryptic compile errors.

	To solve, add `anchor-spl/idl-build` to the `idl-build` feature list:

	[features]
	idl-build = ["anchor-spl/idl-build", ...]

   Compiling token_battle v0.1.0 (/home/trskel/development/anchor_practicas/token_battle/programs/boss_battle)
error[E0599]: no function or associated item named `create_type` found for struct `anchor_spl::token::Mint` in the current scope
  --> programs/boss_battle/src/instructions/attack.rs:83:10
   |
83 | #[derive(Accounts)]
   |          ^^^^^^^^ function or associated item not found in `anchor_spl::token::Mint`
   |
   = note: this error originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no associated item named `DISCRIMINATOR` found for struct `anchor_spl::token::Mint` in the current scope
  --> programs/boss_battle/src/instructions/attack.rs:83:10
   |
83 | #[derive(Accounts)]
   |          ^^^^^^^^ associated item not found in `anchor_spl::token::Mint`
   |
   = note: this error originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `insert_types` found for struct `anchor_spl::token::Mint` in the current scope
  --> programs/boss_battle/src/instructions/attack.rs:83:10
   |
83 | #[derive(Accounts)]
   |          ^^^^^^^^ function or associated item not found in `anchor_spl::token::Mint`
   |
   = note: this error originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `create_type` found for struct `anchor_spl::token::TokenAccount` in the current scope
  --> programs/boss_battle/src/instructions/attack.rs:83:10
   |
83 | #[derive(Accounts)]
   |          ^^^^^^^^ function or associated item not found in `anchor_spl::token::TokenAccount`
   |
   = note: this error originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no associated item named `DISCRIMINATOR` found for struct `anchor_spl::token::TokenAccount` in the current scope
  --> programs/boss_battle/src/instructions/attack.rs:83:10
   |
83 | #[derive(Accounts)]
   |          ^^^^^^^^ associated item not found in `anchor_spl::token::TokenAccount`
   |
   = note: this error originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `insert_types` found for struct `anchor_spl::token::TokenAccount` in the current scope
  --> programs/boss_battle/src/instructions/attack.rs:83:10
   |
83 | #[derive(Accounts)]
   |          ^^^^^^^^ function or associated item not found in `anchor_spl::token::TokenAccount`
   |
   = note: this error originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `create_type` found for struct `anchor_spl::token::Mint` in the current scope
  --> programs/boss_battle/src/instructions/initialize.rs:50:10
   |
50 | #[derive(Accounts)]
   |          ^^^^^^^^ function or associated item not found in `anchor_spl::token::Mint`
   |
   = note: this error originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no associated item named `DISCRIMINATOR` found for struct `anchor_spl::token::Mint` in the current scope
  --> programs/boss_battle/src/instructions/initialize.rs:50:10
   |
50 | #[derive(Accounts)]
   |          ^^^^^^^^ associated item not found in `anchor_spl::token::Mint`
   |
   = note: this error originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `insert_types` found for struct `anchor_spl::token::Mint` in the current scope
  --> programs/boss_battle/src/instructions/initialize.rs:50:10
   |
50 | #[derive(Accounts)]
   |          ^^^^^^^^ function or associated item not found in `anchor_spl::token::Mint`
   |
   = note: this error originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `create_type` found for struct `anchor_spl::token::TokenAccount` in the current scope
  --> programs/boss_battle/src/instructions/initialize.rs:50:10
   |
50 | #[derive(Accounts)]
   |          ^^^^^^^^ function or associated item not found in `anchor_spl::token::TokenAccount`
   |
   = note: this error originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no associated item named `DISCRIMINATOR` found for struct `anchor_spl::token::TokenAccount` in the current scope
  --> programs/boss_battle/src/instructions/initialize.rs:50:10
   |
50 | #[derive(Accounts)]
   |          ^^^^^^^^ associated item not found in `anchor_spl::token::TokenAccount`
   |
   = note: this error originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `insert_types` found for struct `anchor_spl::token::TokenAccount` in the current scope
  --> programs/boss_battle/src/instructions/initialize.rs:50:10
   |
50 | #[derive(Accounts)]
   |          ^^^^^^^^ function or associated item not found in `anchor_spl::token::TokenAccount`
   |
   = note: this error originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0599`.
error: could not compile `token_battle` (lib test) due to 12 previous errors
Error: Building IDL failed. Run `ANCHOR_LOG=true anchor idl build` to see the logs.
